Implements annotations (#1250)